[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cookie-guardian"
version = "0.1.0"
description = "Production-ready ephemeral cookie management for GitHub repositories"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0.0",
    "pynacl>=1.5.0",
    "PyYAML>=6.0.1",
    "httpx>=0.27.0",
    "tenacity>=8.2.3",
    "PyGithub>=2.3.0",
    "patchright>=1.58.0",
    "aiofiles>=24.0.0",
    "pillow>=10.0.0",
    "google-generativeai>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
